# eulex-build

./: .gitignore  LICENSE  MANIFEST.in  README.md  configuration.yaml  example.py  pyproject.toml  requirements.txt
src/eulexbuild/: EULEXBuildPipeline.py  __init__.py  cli.py  config_validation.py  utils.py
src/eulexbuild/data/: __init__.py  cellar_restapi.py  cellar_sparql.py  data_resolver.py
src/eulexbuild/storage/: database.py  models.py  storageManager.py
tests/: test_EULEXBuildPipeline.py  test_config_validation.py
tests/data/: test_cellar_restapi.py  test_cellar_sparql.py  test_data_resolver.py
tests/data/test_html_files/: manual_text_extraction_52023PC0533.xml  manual_text_extraction_52025PC1006.html  manual_text_extraction_annexes_52025PC1006.html
tests/manual_tests/: my_config.yaml  test.py  valid_fixed.yaml
tests/storage/: test_storageManager.py
tests/test_configurations/: invalid_celex_format.yaml  invalid_document_types.yaml  invalid_empty_celex_ids.yaml  invalid_future_end_date.yaml  invalid_future_start_date.yaml  invalid_missing_celex_ids.yaml  invalid_missing_data.yaml  invalid_missing_end_date.yaml  invalid_missing_start_date.yaml  invalid_mode.yaml  invalid_negative_max_threads.yaml  invalid_output_formats.yaml  invalid_start_after_end.yaml  invalid_zero_max_threads.yaml  simple_valid_file.yaml  valid_celex_normalization.yaml  valid_descriptive.yaml  valid_fixed.yaml  valid_procedure_numbers.yaml  valid_simple_descriptive.yaml
